--- a/globe.html
+++ b/globe.html
@@ -1,9 +1,8 @@
-<!--http://bl.ocks.org/dwtkns/4973620-->
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
 .land {
-  fill: rgb(117, 87, 57);
+  fill: #999;
   stroke-opacity: 1;
 }
 .graticule {
@@ -21,14 +20,14 @@
 .noclicks { pointer-events:none; }
 .point {  opacity:.6; }
 .arcs {
-  opacity:.1;
-  stroke: gray;
-  stroke-width: 3;
+  opacity:.8;
+  stroke: red;
+  stroke-width: .5;
 }
 .flyers {
-  stroke-width:1;
-  opacity: .6;
-  stroke: darkred; 
+  opacity: .0;
+  stroke: green;
+  stroke-width: 1;
 }
 .arc, .flyer {
   stroke-linejoin: round;
@@ -71,8 +70,9 @@ var svg = d3.select("body").append("svg")
             .on("mousedown", mousedown);
 queue()
     .defer(d3.json, "world-110m.json")
-    .defer(d3.json, "places.json")
+    .defer(d3.json, "locations.json")
     .await(ready);
+// draws globe
 function ready(error, world, places) {
   var ocean_fill = svg.append("defs").append("radialGradient")
         .attr("id", "ocean_fill")
@@ -109,7 +109,10 @@ function ready(error, world, places) {
         .attr("stop-opacity",".5")
       drop_shadow.append("stop")
         .attr("offset","100%").attr("stop-color", "#000")
-        .attr("stop-opacity","0")  
+        .attr("stop-opacity","0")
+// scalable vector graphics
+// sets up graphical area on webpage that d3 can write on
+// draws lines on globe
   svg.append("ellipse")
     .attr("cx", 440).attr("cy", 450)
     .attr("rx", proj.scale()*.90)
@@ -121,7 +124,7 @@ function ready(error, world, places) {
     .attr("r", proj.scale())
     .attr("class", "noclicks")
     .style("fill", "url(#ocean_fill)");
-  
+
   svg.append("path")
     .datum(topojson.object(world, world.objects.land))
     .attr("class", "land noclicks")
@@ -143,15 +146,12 @@ function ready(error, world, places) {
       .attr("d", path);
   // spawn links between cities as source/target coord pairs
   places.features.forEach(function(a) {
-    places.features.forEach(function(b) {
-      if (a !== b) {
-        links.push({
-          source: a.geometry.coordinates,
-          target: b.geometry.coordinates
-        });
-      }
+    links.push({
+      source: a.geometry.coordinates,
+      target: a.geometryto.coordinates
     });
   });
+
   // build geoJSON features from links array
   links.forEach(function(e,i,a) {
     var feature =   { "type": "Feature", "geometry": { "type": "LineString", "coordinates": [e.source,e.target] }}
@@ -181,7 +181,7 @@ function flying_arc(pts) {
 function refresh() {
   svg.selectAll(".land").attr("d", path);
   svg.selectAll(".point").attr("d", path);
-  
+
   svg.selectAll(".arc").attr("d", path)
     .attr("opacity", function(d) {
         return fade_at_edge(d)
@@ -190,7 +190,7 @@ function refresh() {
     .attr("d", function(d) { return swoosh(flying_arc(d)) })
     .attr("opacity", function(d) {
       return fade_at_edge(d)
-    }) 
+    })
 }
 function fade_at_edge(d) {
   var centerPos = proj.invert([width/2,height/2]),
@@ -198,20 +198,20 @@ function fade_at_edge(d) {
       start, end;
   // function is called on 2 different data structures..
   if (d.source) {
-    start = d.source, 
-    end = d.target;  
+    start = d.source,
+    end = d.target;
   }
   else {
     start = d.geometry.coordinates[0];
     end = d.geometry.coordinates[1];
   }
-  
+
   var start_dist = 1.57 - arc.distance({source: start, target: centerPos}),
       end_dist = 1.57 - arc.distance({source: end, target: centerPos});
-    
-  var fade = d3.scale.linear().domain([-.1,0]).range([0,.1]) 
-  var dist = start_dist < end_dist ? start_dist : end_dist; 
-  return fade(dist)
+
+  var fade = d3.scale.linear().domain([-.1,0]).range([0,.1])
+  var dist = start_dist < end_dist ? start_dist : end_dist;
+  return 1
 }
 function location_along_arc(start, end, loc) {
   var interpolator = d3.geo.interpolate(start,end);
