--- a/globe.html
+++ b/globe.html
@@ -99,7 +99,7 @@ function ready(error, world, places) {
         .attr("offset","30%").attr("stop-color", "#fff")
         .attr("stop-opacity","0")
       globe_shading.append("stop")
-        .attr("offset","100%").attr("stop-color", "#505962")
+        .attr("offset","100%").attr("stop-color", "#B5EAAA")
         .attr("stop-opacity","0.3")
   var drop_shadow = svg.append("defs").append("radialGradient")
         .attr("id", "drop_shadow")
