--- a/globe.html
+++ b/globe.html
@@ -96,7 +96,7 @@ function ready(error, world, places) {
         .attr("cx", "55%")
         .attr("cy", "45%");
       globe_shading.append("stop")
-        .attr("offset","30%").attr("stop-color", "#fff")
+        .attr("offset","30%").attr("stop-color", "#B5EAAA")
         .attr("stop-opacity","0")
       globe_shading.append("stop")
         .attr("offset","100%").attr("stop-color", "#B5EAAA")
