--- a/globe.html
+++ b/globe.html
@@ -79,7 +79,7 @@ function ready(error, world, places) {
         .attr("id", "ocean_fill")
         .attr("cx", "75%")
         .attr("cy", "25%");
-      ocean_fill.append("stop").attr("offset", "5%").attr("stop-color", "#fff");
+      ocean_fill.append("stop").attr("offset", "5%").attr("stop-color", "#6698FF");
       ocean_fill.append("stop").attr("offset", "100%").attr("stop-color", "#6698FF");
   var globe_highlight = svg.append("defs").append("radialGradient")
         .attr("id", "globe_highlight")
