--- a/globe.html
+++ b/globe.html
@@ -42,7 +42,7 @@
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://d3js.org/queue.v1.min.js"></script>
 <script src="https://d3js.org/topojson.v0.min.js"></script>
-<p>test 003</p>
+<p>test 004</p>
 <script>
 d3.select(window)
     .on("mousemove", mousemove)
@@ -79,7 +79,8 @@ function ready(error, world, places) {
         .attr("id", "ocean_fill")
         .attr("cx", "75%")
         .attr("cy", "25%");
-      ocean_fill.append("stop").attr("offset", "5%").attr("stop-color", "#6698FF");
+  // ocean highlight and lowlight
+      ocean_fill.append("stop").attr("offset", "5%").attr("stop-color", "#70A5FF");
       ocean_fill.append("stop").attr("offset", "100%").attr("stop-color", "#6698FF");
   var globe_highlight = svg.append("defs").append("radialGradient")
         .attr("id", "globe_highlight")
