--- a/globe.html
+++ b/globe.html
@@ -2,13 +2,13 @@
 <meta charset="utf-8">
 <style>
 .land {
-  fill: #999;
+  fill: #00FF00;
   stroke-opacity: 1;
 }
 .graticule {
   fill: none;
   stroke: black;
-  stroke-width:.2;
+  stroke-width:3;
   opacity:.2;
 }
 .labels {
@@ -42,7 +42,7 @@
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://d3js.org/queue.v1.min.js"></script>
 <script src="https://d3js.org/topojson.v0.min.js"></script>
-<p>test 009</p>
+<p>test 00a</p>
 <script>
 d3.select(window)
     .on("mousemove", mousemove)
@@ -97,7 +97,7 @@ function ready(error, world, places) {
         .attr("cx", "55%")
         .attr("cy", "45%");
       globe_shading.append("stop")
-        .attr("offset","30%").attr("stop-color", "#f0f0f0")
+        .attr("offset","30%").attr("stop-color", "#cccccc")
         .attr("stop-opacity","0")
       globe_shading.append("stop")
         .attr("offset","100%").attr("stop-color", "#cccccc")
