--- a/globe.html
+++ b/globe.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <style>
 .land {
-  fill: #00FF00;
+  fill: #B5EAAA;
   stroke-opacity: 1;
 }
 .graticule {
@@ -42,7 +42,7 @@
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://d3js.org/queue.v1.min.js"></script>
 <script src="https://d3js.org/topojson.v0.min.js"></script>
-<p>test 00a</p>
+<p>test 00b</p>
 <script>
 d3.select(window)
     .on("mousemove", mousemove)
