--- a/globe.html
+++ b/globe.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
+<!-- land color -->
 .land {
   fill: #B5EAAA;
   stroke-opacity: 1;
@@ -8,7 +9,7 @@
 .graticule {
   fill: none;
   stroke: black;
-  stroke-width:3;
+  stroke-width:.5;
   opacity:.2;
 }
 .labels {
@@ -18,7 +19,9 @@
     display:none;
 }
 .noclicks { pointer-events:none; }
-.point {  opacity:.6; }
+.point {
+  opacity:.6;
+  stroke-width: .5;}
 .arcs {
   opacity:.8;
   stroke: red;
@@ -86,6 +89,7 @@ function ready(error, world, places) {
         .attr("id", "globe_highlight")
         .attr("cx", "75%")
         .attr("cy", "25%");
+  // globe highlight
       globe_highlight.append("stop")
         .attr("offset", "5%").attr("stop-color", "#eeeeee")
         .attr("stop-opacity","0.6");
@@ -96,6 +100,7 @@ function ready(error, world, places) {
         .attr("id", "globe_shading")
         .attr("cx", "55%")
         .attr("cy", "45%");
+  // globe shadows
       globe_shading.append("stop")
         .attr("offset","30%").attr("stop-color", "#cccccc")
         .attr("stop-opacity","0")
