--- a/globe.html
+++ b/globe.html
@@ -19,9 +19,7 @@
     display:none;
 }
 .noclicks { pointer-events:none; }
-.point {
-  opacity:.6;
-  stroke-width: .5;}
+.point {  opacity:.6; }
 .arcs {
   opacity:.8;
   stroke: red;
