--- a/globe.html
+++ b/globe.html
@@ -22,8 +22,8 @@
 .point {  opacity:.6; }
 .arcs {
   opacity:.8;
-  stroke: red;
-  stroke-width: .5;
+  stroke: #82CAFA;
+  stroke-width: .3;
 }
 .flyers {
   opacity: .0;
@@ -43,7 +43,7 @@
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://d3js.org/queue.v1.min.js"></script>
 <script src="https://d3js.org/topojson.v0.min.js"></script>
-<p>test 00b</p>
+<p>test 00c</p>
 <script>
 d3.select(window)
     .on("mousemove", mousemove)
