--- a/globe.html
+++ b/globe.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
-<!-- land color -->
 .land {
   fill: #B5EAAA;
   stroke-opacity: 1;
@@ -22,7 +21,7 @@
 .point {  opacity:.6; }
 .arcs {
   opacity:.8;
-  stroke: #82CAFA;
+  stroke: #306EFF;
   stroke-width: .3;
 }
 .flyers {
