--- a/globe.html
+++ b/globe.html
@@ -42,7 +42,7 @@
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://d3js.org/queue.v1.min.js"></script>
 <script src="https://d3js.org/topojson.v0.min.js"></script>
-<p>test 00c</p>
+<p>test 00d</p>
 <script>
 d3.select(window)
     .on("mousemove", mousemove)
