--- a/globe.html
+++ b/globe.html
@@ -25,9 +25,9 @@
   stroke-width: .3;
 }
 .flyers {
-  opacity: .0;
-  stroke: green;
-  stroke-width: 1;
+  opacity: .5;
+  stroke: #306EFF;
+  stroke-width: .5;
 }
 .arc, .flyer {
   stroke-linejoin: round;
@@ -42,7 +42,7 @@
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://d3js.org/queue.v1.min.js"></script>
 <script src="https://d3js.org/topojson.v0.min.js"></script>
-<p>test 00d</p>
+<p>test 00e</p>
 <script>
 d3.select(window)
     .on("mousemove", mousemove)
