--- a/globe.html
+++ b/globe.html
@@ -18,14 +18,14 @@
     display:none;
 }
 .noclicks { pointer-events:none; }
-.point {  opacity:.6; }
+.point {  opacity:.1; }
 .arcs {
   opacity:.8;
   stroke: #306EFF;
   stroke-width: .3;
 }
 .flyers {
-  opacity: .5;
+  opacity: 0;
   stroke: #306EFF;
   stroke-width: .5;
 }
@@ -42,7 +42,7 @@
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://d3js.org/queue.v1.min.js"></script>
 <script src="https://d3js.org/topojson.v0.min.js"></script>
-<p>test 00e</p>
+<p>test 00f</p>
 <script>
 d3.select(window)
     .on("mousemove", mousemove)
