updating readme and index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 <title>Test Page</title>
 </head>
+
 <body>
-<h1>Test Page</h1>
-<p>Testing.</p>
+<h1>sastaffo's visualisation project</h1>
 <hr>
-<p>Testing.</p> 
+<a href="sastaffo.github.io/globe_1.html">Globe 1 - username: lydell</a>
+<hr>
 </body>
 </html>
