--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <body>
 <h1>sastaffo's visualisation project</h1>
 <hr>
+  <p>1-12-18 14:33</p>
+<a href="sastaffo.github.io/globe.html">Globe - username: lydell</a>
 <a href="sastaffo.github.io/globe_1.html">Globe 1 - username: lydell</a>
+<a href="sastaffo.github.io/globe_2.html">Globe 2 - username: sastaffo</a>
 <hr>
 </body>
 </html>
