--- a/globe.html
+++ b/globe.html
@@ -70,7 +70,7 @@ var svg = d3.select("body").append("svg")
             .on("mousedown", mousedown);
 queue()
     .defer(d3.json, "world-110m.json")
-    .defer(d3.json, "locations.json")
+    .defer(d3.json, "locations_1.json")
     .await(ready);
 // draws globe
 function ready(error, world, places) {
