--- a/globe_1.html
+++ b/globe_1.html
@@ -18,15 +18,15 @@
     display:none;
 }
 .noclicks { pointer-events:none; }
-.point {  opacity:.1; }
+.point {  opacity:.3; stroke: #151B54}
 .arcs {
   opacity:.8;
-  stroke: #E9AB17;
+  stroke: #151B54;
   stroke-width: .3;
 }
 .flyers {
   opacity: 0;
-  stroke: #306EFF;
+  stroke: #151B54;
   stroke-width: .5;
 }
 .arc, .flyer {
