--- a/globe_1.html
+++ b/globe_1.html
@@ -18,7 +18,10 @@
     display:none;
 }
 .noclicks { pointer-events:none; }
-.point {  opacity:.3; stroke: #151B54}
+.point {
+  opacity:.3;
+  stroke: #151B54;
+  stroke-width: .1}
 .arcs {
   opacity:.8;
   stroke: #151B54;
