--- a/globe_1.html
+++ b/globe_1.html
@@ -20,7 +20,7 @@
 .noclicks { pointer-events:none; }
 .point {
   opacity:.3;
-  stroke: #151B54;
+  stroke: #FF0000;
   stroke-width: .1}
 .arcs {
   opacity:.8;
