--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>sastaffo</title>
+<title>Globes</title>
 </head>
 
 <body>
-<h1>sastaffo's visualisation project</h1>
+<h1>sastaffo's visualisation project - Globes</h1>
 <hr>
 <p>1-12-18 15:20</p>
 <a href="sastaffo.github.io/globe_1.html">Globe 1 - username: lydell</a>
 <hr>
-<a href="sastaffo.github.io/globe_2.html">Globe 2 - username: sastaffo</a>
+<a href="sastaffo.github.io/globe_2.html">Globe 2 - username: bergpb</a>
 <hr>
-<a href="sastaffo.github.io/globe_3.html">Globe 3 - username: lydell</a>
+<a href="sastaffo.github.io/globe_3.html">Globe 3 - username: joan2937</a>
 <hr>
 </body>
 </html>
