--- a/globe_1.html
+++ b/globe_1.html
@@ -45,6 +45,7 @@
 </style>
 
 <body>
+  <a href="https://sastaffo.github.io/index.html"><p>Back</p></a>
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://d3js.org/queue.v1.min.js"></script>
 <script src="https://d3js.org/topojson.v0.min.js"></script>
