--- a/globe_1.html
+++ b/globe_1.html
@@ -45,7 +45,11 @@
 </style>
 
 <body>
+  <h1>Globe 1</h1>
   <a href="https://sastaffo.github.io/index.html"><p>Back</p></a>
+  <p>This globe shows links from followers of user <i>lydell</i> to his location (Stockholm), and links from their followers to their locations</p>
+  <p>The opacity of the dot on the globe shows the traffic through that location.</p>
+  <hr>
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://d3js.org/queue.v1.min.js"></script>
 <script src="https://d3js.org/topojson.v0.min.js"></script>
@@ -253,3 +257,4 @@ function mouseup() {
   }
 }
 </script>
+  <hr>
