--- a/globe_1.html
+++ b/globe_1.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
 <title>Globe 1</title>
+<link href="http://fonts.googleapis.com/css?family=Corben:bold" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Nobile" rel="stylesheet" type="text/css">
 </head>
 <meta charset="utf-8">
 <style>
