--- a/globe_1.html
+++ b/globe_1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title>Globe 1</title>
+  <link rel="stylesheet" type="text/css" href="custom.css">
 <link href="http://fonts.googleapis.com/css?family=Corben:bold" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Nobile" rel="stylesheet" type="text/css">
 </head>
