--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <title>Globes</title>
+  <style>
+body {
+    background-image: url("funky-lines.png");
+}
+</style>
 <link rel="stylesheet" type="text/css" href="custom.css">
 <link href="http://fonts.googleapis.com/css?family=Corben:bold" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Nobile" rel="stylesheet" type="text/css">
