--- a/globe_1.html
+++ b/globe_1.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <head>
 <title>Globe 1</title>
+    <style>
+body {
+    background-image: url("funky-lines.png");
+}
+</style>
   <link rel="stylesheet" type="text/css" href="custom.css">
 <link href="http://fonts.googleapis.com/css?family=Corben:bold" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Nobile" rel="stylesheet" type="text/css">
