--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Globes</title>
   <style>
 body {
-    background-image: url("funky-lines.png");
+    background-image: url("stardust.png");
 }
 </style>
 <link rel="stylesheet" type="text/css" href="custom.css">
