--- a/globe_1.html
+++ b/globe_1.html
@@ -3,7 +3,7 @@
 <title>Globe 1</title>
     <style>
 body {
-    background-image: url("stardust.png");
+    background-image: url("sky.png");
 }
 </style>
   <link rel="stylesheet" type="text/css" href="custom.css">
