--- a/globe_1.html
+++ b/globe_1.html
@@ -55,7 +55,8 @@ body {
 <body>
   <h1>Globe 1</h1>
   <a href="https://sastaffo.github.io/index.html"><p>Back</p></a>
-  <p>This globe shows links from followers of user <i>lydell</i> to his location (Stockholm), and links from their followers to their locations</p>
+  <p>This globe graphically shows <i>lydell</i>'s followers' locations in relation to his own location.</p>
+    <p>It also shows the followers of his followers.</p>
   <p>The opacity of the dot on the globe shows the traffic through that location.</p>
   <hr>
 <script src="https://d3js.org/d3.v3.min.js"></script>
