--- a/globe_3.html
+++ b/globe_3.html
@@ -55,8 +55,8 @@ body {
 <body>
   <h1>Globe 3</h1>
   <a href="https://sastaffo.github.io/index.html"><p>Back</p></a>
-  <p>This globe graphically shows <i>joan2937</i>'s followers' locations in relation to his own location.</p>
-    <p>It also shows the followers of his followers.</p>
+    <p>This globe graphically shows <i>joan2937</i>'s locations in relation to their followers' locations.</p>
+    <p>It also maps the followers.</p>
   <p>The opacity of the dot on the globe shows the traffic through that location.</p>
   <hr>
 <script src="https://d3js.org/d3.v3.min.js"></script>
