--- a/globe_1.html
+++ b/globe_1.html
@@ -55,9 +55,10 @@ body {
 <body>
   <h1>Globe 1</h1>
   <a href="https://sastaffo.github.io/index.html"><p>Back</p></a>
-  <p>This globe graphically shows <i>lydell</i>'s followers' locations in relation to his own location.</p>
-    <p>It also shows the followers of his followers.</p>
-  <p>The opacity of the dot on the globe shows the traffic through that location.</p>
+    <p>This globe graphically shows <i>lydell</i>'s locations in relation to their followers' locations.
+    <br>It also maps those followers' locations to the locations of their followers.</p>
+  <p>The opacity of the dot on the globe shows the traffic through that location,
+      <br>either from one person with a lot of connections, or a lot of people.</p>
   <hr>
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://d3js.org/queue.v1.min.js"></script>
