--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@ body {
 <h1>sastaffo's visualisation project - Globes</h1>
 <hr>
 <p>1-12-18 17:45</p>
-<a href="sastaffo.github.io/globe_1.html">Globe 1 - username: lydell</a>
+<a href="sastaffo.github.io/globe_1.html"><h3>Globe 1 - username: lydell</h3></a>
 <hr>
-<a href="sastaffo.github.io/globe_2.html">Globe 2 - username: bergpb</a>
+<a href="sastaffo.github.io/globe_2.html"><h3>Globe 2 - username: bergpb</h3></a>
 <hr>
-<a href="sastaffo.github.io/globe_3.html">Globe 3 - username: joan2937</a>
+<a href="sastaffo.github.io/globe_3.html"><h3>Globe 3 - username: joan2937</h3></a>
 <hr>
+  <p></p>
 </body>
 </html>
