--- a/globe_2.html
+++ b/globe_2.html
@@ -55,7 +55,7 @@ body {
 <body>
   <h1>Globe 2</h1>
   <a href="https://sastaffo.github.io/index.html"><p>Back</p></a>
-    <p>This globe graphically shows <i>bergpb</i>'s locations in relation to their followers' locations.
+    <p>This globe graphically shows <i>bergpb</i>'s location (Fortaleza, Brazil) in relation to their followers' locations.
     <br>It also maps those followers' locations to the locations of their followers.</p>
   <p>The opacity of the dot on the globe shows the traffic through that location,
       <br>either from one person with a lot of connections, or a lot of people.</p>
