--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@ body {
 <hr>
 <a href="sastaffo.github.io/globe_3.html"><h3>Globe 3 - username: joan2937</h3></a>
 <hr>
-  <p></p>
+  <h2>Code:</h2>
+  <h4>GitUser.py:</h4>
+  <p>
+    GitUser takes in a password and a username of user X. If user X has a location set on github,
+    <br>the program will find all of X's followers who also have a location set and create a list of tuples
+    <br>mapping their location to X's and vice versa.
+    <br>The program interacts with the github API in multiple of these functions, getting the user's location and list of followers.
+    <br>
+  </p>
+  <h4>Helper.py:</h4>
+  <p>
+    helper.py contains 3 classes designed to help with gituser's functionality. 
 </body>
 </html>
