--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body {
 
   <h4>Custom.css</h4>
   <p>
-    This is a small amount of CSS code to make the sastaffo.github.io page more attractive.
+    This is a small amount of CSS code to change the fonts and font colours on the webpage.
   </p>
 </body>
 </html>
