--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@ body {
 </style>
 <link rel="stylesheet" type="text/css" href="custom.css">
 <link href="http://fonts.googleapis.com/css?family=Corben:bold" rel="stylesheet" type="text/css">
-<link href="http://fonts.googleapis.com/css?family=Nobile" rel="stylesheet" type="text/css">
-</head>
+<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"></head>
 
 <body>
 <h1>sastaffo's visualisation project - Globes</h1>
