--- a/globe_2.html
+++ b/globe_2.html
@@ -8,7 +8,7 @@ body {
 </style>
   <link rel="stylesheet" type="text/css" href="custom.css">
 <link href="http://fonts.googleapis.com/css?family=Corben:bold" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"></head>
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"></head>
 <meta charset="utf-8">
 <style>
 .land {
