--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@ body {
 <hr>
 <a href="sastaffo.github.io/globe_3.html"><h3>Globe 3 - username: joan2937</h3></a>
 <hr>
+  <h2>Overview:</h2>
+  <p>
+    This program generates a globe mapping the location of a github user to all of their followers
+    <br>and in turn maps those users to their followers, using a d3 globe. 
+  </p>
   <h2>Code:</h2>
   <h4>GitUser.py:</h4>
   <p>
