updating HTML links

--- a/globes3rdYear/index_globe.html
+++ b/globes3rdYear/index_globe.html
@@ -15,16 +15,16 @@ body {
 <h1>sastaffo's visualisation project - Globes</h1>
 <hr>
 <p>1-12-18 17:45</p>
-<a href="sastaffo.github.io/globe_1.html"><h3>Globe 1 - username: lydell</h3></a>
+<a href="sastaffo.github.io/globes3rdYear/globe_1.html"><h3>Globe 1 - username: lydell</h3></a>
 <hr>
-<a href="sastaffo.github.io/globe_2.html"><h3>Globe 2 - username: bergpb</h3></a>
+<a href="sastaffo.github.io/globes3rdYear/globe_2.html"><h3>Globe 2 - username: bergpb</h3></a>
 <hr>
-<a href="sastaffo.github.io/globe_3.html"><h3>Globe 3 - username: joan2937</h3></a>
+<a href="sastaffo.github.io/globes3rdYear/globe_3.html"><h3>Globe 3 - username: joan2937</h3></a>
 <hr>
   <h2>Overview:</h2>
   <p>
     This program generates a globe mapping the location of a github user to all of their followers
-    <br>and in turn maps those users to their followers, using a d3 globe. 
+    <br>and in turn maps those users to their followers, using a d3 globe.
   </p>
   <h2>Code:</h2>
   <h4>GitUser.py:</h4>
