--- a/globes3rdYear/index_globe.html
+++ b/globes3rdYear/index_globe.html
@@ -15,11 +15,11 @@ body {
 <h1>sastaffo's visualisation project - Globes</h1>
 <hr>
 <p>1-12-18 17:45</p>
-<a href="sastaffo.github.io/globes3rdYear/globe_1.html"><h3>Globe 1 - username: lydell</h3></a>
+<a href="https://sastaffo.github.io/globes3rdYear/globe_1.html"><h3>Globe 1 - username: lydell</h3></a>
 <hr>
-<a href="sastaffo.github.io/globes3rdYear/globe_2.html"><h3>Globe 2 - username: bergpb</h3></a>
+<a href="https://sastaffo.github.io/globes3rdYear/globe_2.html"><h3>Globe 2 - username: bergpb</h3></a>
 <hr>
-<a href="sastaffo.github.io/globes3rdYear/globe_3.html"><h3>Globe 3 - username: joan2937</h3></a>
+<a href="https://sastaffo.github.io/globes3rdYear/globe_3.html"><h3>Globe 3 - username: joan2937</h3></a>
 <hr>
   <h2>Overview:</h2>
   <p>
