--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-	<a href="sastaffo.github.io/globes3rdYear/index_globe.html"><h3>Globes - 3rd Year Project</h3></a>
+	<a href="https://sastaffo.github.io/globes3rdYear/index_globe.html"><h3>Globes - 3rd Year Project</h3></a>
 	<br>
-	<a href="sastaffo.github.io/RDF_turtle/turtle.html"><h3>TurtleRDF</h3></a>
+	<a href="https://sastaffo.github.io/RDF_turtle/turtle.html"><h3>TurtleRDF</h3></a>
 </body>
