--- a/RDF_turtle/turtle.html
+++ b/RDF_turtle/turtle.html
@@ -5,5 +5,21 @@
 </head>
 
 <body>
-	x
+	<p># sets up prefixes @prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> . @prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> . @prefix owl: <http://www.w3.org/2002/07/owl#> . @prefix foaf: <http://xmlns.com/foaf/0.1/>.</p>
+
+<p>@prefix my: <my.com/schema#> .</p>
+
+<p> # sets up classes my:Person rdfs:subClassOf foaf:Person . my:Student rdfs:subClassOf my:Person .</p>
+
+<p> # sets up predicates my:isParentOf a rdf:predicate ;  rdfs:isDefinedBy <my.com/schema#> ;  rdfs:label &quot;isParentOf&quot; ;  rdfs:comment &quot;Subject is a parent of the Object.&quot; ;  rdfs:domain my:Person ; # subject must be type my:person  rdfs:range my:Person . # object must be type my:person</p>
+
+<p>my:isChildOf a rdf:predicate ;  rdfs:isDefinedBy <my.com/schema#> ;  rdfs:label &quot;isChildOf&quot; ;  rdfs:comment &quot;Subject is a child of the Object.&quot; ;  rdfs:domain my:Person ;  rdfs:range my:Person .</p>
+
+<p>my:isSiblingOf a rdf:predicate ;  rdfs:isDefinedBy <my.com/schema#> ;  rdfs:label &quot;isSiblingOf&quot; ;  rdfs:comment &quot;Subject is a sibling of the Object.&quot; ;  rdfs:domain my:Person ;  rdfs:range my:Person .</p>
+
+<p>my:firstName a rdf:predicate ;  rdfs:isDefinedBy <my.com/schema#> ;  rdfs:label &quot;firstName&quot; ;  rdfs:comment &quot;Subject has first name Object, as String.&quot; ;  rdfs:domain my:Person ;  rdfs:range rdfs:Literal .</p>
+
+<p>my:lastName a rdf:predicate ;  rdfs:isDefinedBy <my.com/schema#> ;  rdfs:label &quot;lastName&quot; ;  rdfs:comment &quot;Subject has last name Object, as String.&quot; ;  rdfs:domain my:Person ;  rdfs:range rdfs:Literal .</p>
+
+<p>my:dateOfBirth a rdf:predicate ;  rdfs:isDefinedBy <my.com/schema#> ;  rdfs:label &quot;dateOfBirth&quot; ;  rdfs:comment &quot;Subject was born Object, as Date.&quot; ;  rdfs:domain my:Person ;  rdfs:range rdfs:Literal .</p>
 </body>
