--- a/RDF_turtle/turtle.html
+++ b/RDF_turtle/turtle.html
@@ -8,17 +8,17 @@
 	<p>
 		# sets up prefixes
 		<br>
-		@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
+		@prefix rdf: &#60; http://www.w3.org/1999/02/22-rdf-syntax-ns# &#62;   .
 		<br>
-		@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
+		@prefix rdfs: &#60; http://www.w3.org/2000/01/rdf-schema# &#62;   .
 		<br>
-		@prefix owl: <http://www.w3.org/2002/07/owl#> .
+		@prefix owl: &#60; http://www.w3.org/2002/07/owl# &#62;   .
 		<br>
-		@prefix foaf: <http://xmlns.com/foaf/0.1/>.
+		@prefix foaf: &#60; http://xmlns.com/foaf/0.1# &#62;  .
 	</p>
 
 	<p>
-		@prefix my: <https://sastaffo.github.io/RDF_turtle/turtle.html#> .
+		@prefix my: &#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62;   .
 	</p>
 
 	<p>
@@ -36,7 +36,7 @@
 	<p>
 		my:isParentOf a rdf:predicate ;
 		<br>
-		rdfs:isDefinedBy <https://sastaffo.github.io/RDF_turtle/turtle.html#> ;
+		rdfs:isDefinedBy &#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62;   ;
 		<br>
 		rdfs:label &quot;isParentOf&quot; ;
 		<br>
@@ -49,7 +49,7 @@
 
 	<p>
 		my:isChildOf a rdf:predicate ;
-		rdfs:isDefinedBy <https://sastaffo.github.io/RDF_turtle/turtle.html#>;
+		rdfs:isDefinedBy &#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62;  ;
 		<br>
 		rdfs:label &quot;isChildOf&quot;;
 		<br>
@@ -63,7 +63,7 @@
 	<p>
 		my:isSiblingOf a rdf:predicate ;
 		<br>
-		rdfs:isDefinedBy <https://sastaffo.github.io/RDF_turtle/turtle.html#> ;
+		rdfs:isDefinedBy &#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62;   ;
 		<br>
 		rdfs:label &quot;isSiblingOf&quot; ;
 		<br>
@@ -77,7 +77,7 @@
 	<p>
 		my:firstName a rdf:predicate ;
 		<br>
-		rdfs:isDefinedBy <https://sastaffo.github.io/RDF_turtle/turtle.html#> ;
+		rdfs:isDefinedBy &#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62;   ;
 		<br>
 		rdfs:label &quot;firstName&quot; ;
 		<br>
@@ -91,7 +91,7 @@
 	<p>
 		my:lastName a rdf:predicate ;
 		<br>
-		rdfs:isDefinedBy <https://sastaffo.github.io/RDF_turtle/turtle.html#> ;
+		rdfs:isDefinedBy &#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62;   ;
 		<br>
 		rdfs:label &quot;lastName&quot; ;
 		<br>
@@ -105,7 +105,7 @@
 	<p>
 		my:dateOfBirth a rdf:predicate ;
 		<br>
-		rdfs:isDefinedBy <https://sastaffo.github.io/RDF_turtle/turtle.html#> ;
+		rdfs:isDefinedBy &#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62;   ;
 		<br>
 		rdfs:label &quot;dateOfBirth&quot; ;
 		<br>
