--- a/RDF_turtle/turtle.html
+++ b/RDF_turtle/turtle.html
@@ -6,113 +6,111 @@
 
 <body>
 	<p>
-		# sets up prefixes
-		<br>
-		@prefix rdf: &#60; http://www.w3.org/1999/02/22-rdf-syntax-ns# &#62;   .
-		<br>
-		@prefix rdfs: &#60; http://www.w3.org/2000/01/rdf-schema# &#62;   .
-		<br>
-		@prefix owl: &#60; http://www.w3.org/2002/07/owl# &#62;   .
-		<br>
-		@prefix foaf: &#60; http://xmlns.com/foaf/0.1# &#62;  .
-	</p>
+		@prefix rdf:	&#60; http://www.w3.org/1999/02/22-rdf-syntax-ns# &#62; .
+		@prefix rdfs:	&#60; http://www.w3.org/2000/01/rdf-schema# &#62; .
+		@prefix owl:	&#60; http://www.w3.org/2002/07/owl# &#62; .
+		@prefix foaf:	&#60; http://xmlns.com/foaf/0.1/ &#62; .
 
-	<p>
-		@prefix my: &#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62;   .
-	</p>
+		@prefix my:		&#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62; .
 
-	<p>
-		# sets up classes
-		<br>
-		my:Person rdfs:subClassOf foaf:Person .
-		<br>
-		my:Student rdfs:subClassOf my:Person .
-	</p>
 
-	<p>
-		# sets up predicates
-	</p>
+		my:Person		rdfs:subClassOf		foaf:Person .
+		my:Student		rdfs:subClassOf		my:Person .
+		my:Location		rdfs:subClassOf		foaf:SpatialThing .
+		my:City			rdfs:subClassOf		foaf:SpatialThing .
+		my:Country		rdfs:subClassOf		foaf:SpatialThing .
+		my:University	rdfs:subClassOf		my:Location .
+		my:House		rdfs:subClassOf		my:Location .
+		my:Pet			rdfs:subClassOf		owl:Thing .
+		my:Rabbit		rdfs:subClassOf		my:Pet .
+		my:Novel		rdfs:subClassOf		owl:Thing .
 
-	<p>
-		my:isParentOf a rdf:predicate ;
-		<br>
-		rdfs:isDefinedBy &#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62;   ;
-		<br>
-		rdfs:label &quot;isParentOf&quot; ;
-		<br>
-		rdfs:comment &quot;Subject is a parent of the Object.&quot; ;
-		<br>
-		rdfs:domain my:Person ; # subject must be type my:person
-		<br>
-		rdfs:range my:Person . # object must be type my:person
-	 </p>
 
-	<p>
-		my:isChildOf a rdf:predicate ;
-		rdfs:isDefinedBy &#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62;  ;
-		<br>
-		rdfs:label &quot;isChildOf&quot;;
-		<br>
-		rdfs:comment &quot;Subject is a child of the Object.&quot;;
-		<br>
-		rdfs:domain my:Person ;
-		<br>
-		rdfs:range my:Person .
-	</p>
+		my:isParentOf	a					rdf:predicate ;
+						rdfs:isDefinedBy	&#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62; ;
+						rdfs:label			"isParentOf" ;
+						rdfs:comment		"Subject is a parent of the Object." ;
+						rdfs:domain			my:Person ;
+						rdfs:range			my:Person .
 
-	<p>
-		my:isSiblingOf a rdf:predicate ;
-		<br>
-		rdfs:isDefinedBy &#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62;   ;
-		<br>
-		rdfs:label &quot;isSiblingOf&quot; ;
-		<br>
-		rdfs:comment &quot;Subject is a sibling of the Object.&quot; ;
-		<br>
-		rdfs:domain my:Person ;
-		<br>
-		rdfs:range my:Person .
-	</p>
+		my:isChildOf	a					rdf:predicate ;
+						rdfs:isDefinedBy	&#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62; ;
+						rdfs:label			"isChildOf" ;
+						rdfs:comment		"Subject is a child of the Object." ;
+						rdfs:domain			my:Person ;
+						rdfs:range			my:Person .
 
-	<p>
-		my:firstName a rdf:predicate ;
-		<br>
-		rdfs:isDefinedBy &#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62;   ;
-		<br>
-		rdfs:label &quot;firstName&quot; ;
-		<br>
-		rdfs:comment &quot;Subject has first name Object, as String.&quot; ;
-		<br>
-		rdfs:domain my:Person ;
-		<br>
-		rdfs:range rdfs:Literal .
-	</p>
+		my:isSiblingOf	a					rdf:predicate ;
+						rdfs:isDefinedBy	&#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62; ;
+						rdfs:label			"isSiblingOf" ;
+						rdfs:comment		"Subject is a sibling of the Object." ;
+						rdfs:domain			my:Person ;
+						rdfs:range			my:Person .
 
-	<p>
-		my:lastName a rdf:predicate ;
-		<br>
-		rdfs:isDefinedBy &#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62;   ;
-		<br>
-		rdfs:label &quot;lastName&quot; ;
-		<br>
-		rdfs:comment &quot;Subject has last name Object, as String.&quot; ;
-		<br>
-		rdfs:domain my:Person ;
-		<br>
-		rdfs:range rdfs:Literal .
-	</p>
+		my:firstName	a					rdf:predicate ;
+						rdfs:isDefinedBy	&#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62; ;
+						rdfs:label			"firstName" ;
+						rdfs:comment		"Subject has first name Object, as String." ;
+						rdfs:domain			my:Person ;
+						rdfs:range			rdfs:Literal .
 
-	<p>
-		my:dateOfBirth a rdf:predicate ;
-		<br>
-		rdfs:isDefinedBy &#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62;   ;
-		<br>
-		rdfs:label &quot;dateOfBirth&quot; ;
-		<br>
-		rdfs:comment &quot;Subject was born Object, as Date.&quot; ;
-		<br>
-		rdfs:domain my:Person ;
-		<br>
-		rdfs:range rdfs:Literal .
+		my:lastName		a					rdf:predicate ;
+						rdfs:isDefinedBy	&#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62; ;
+						rdfs:label			"lastName" ;
+						rdfs:comment		"Subject has last name Object, as String." ;
+						rdfs:domain			my:Person ;
+						rdfs:range			rdfs:Literal .
+
+		my:dateOfBirth	a					rdf:predicate ;
+						rdfs:isDefinedBy	&#60; https://sastaffo.github.io/RDF_turtle/turtle.html# &#62; ;
+						rdfs:label			"dateOfBirth" ;
+						rdfs:comment		"Subject was born Object, as Date." ;
+						rdfs:domain			my:Person ;
+						rdfs:range			rdfs:Literal .
+
+		my:isAlumOf		a					rdf:predicate ;
+						rdfs:label			"isAlumOf" ;
+						rdfs:comment		"Subject is an alumnus of Object." ;
+						rdfs:domain			my:Person ;
+						rdfs:range			rdfs:University .
+
+		my:livesIn		a					rdf:predicate ;
+						rdfs:label			"livesIn" ;
+						rdfs:comment		"Subject lives in Object." ;
+						rdfs:domain			my:Person ;
+						rdfs:range			my:House .
+
+
+		my:isStudentOf	a					rdf:predicate ;
+						rdfs:label			"isStudentOf" ;
+						rdfs:comment		"Subject is a Student at Object." ;
+						rdfs:domain			my:Person ;
+						rdfs:range			my:University .
+
+
+		my:inCity		a					rdf:predicate ;
+						rdfs:label			"inCity" ;
+						rdfs:comment		"Subject is located in Object." ;
+						rdfs:domain			my:Location ;
+						rdfs:range			my:City .
+
+		my:inCountry	a					rdf:predicate ;
+						rdfs:label			"inCountry" ;
+						rdfs:comment		"Subject located in Object." ;
+						rdfs:domain			my:Location ;
+						rdfs:range			my:Country .
+
+		my:address		a					rdf:predicate ;
+						rdfs:label			"address" ;
+						rdfs:comment		"Subject is located at address of Object, as String." ;
+						rdfs:domain			my:Location ;
+						rdfs:range			my:Literal .
+
+		my:fullName		a					rdf:predicate ;
+						rdfs:label			"fullName" ;
+						rdfs:comment		"Subject has full name of Object, as String." ;
+						rdfs:domain			my:Location ;
+						rdfs:range			my:Literal .
+
 	</p>
 </body>
